src/main/java/com/example/demo/controDeErrores/error/ApiSubError.java
package com.example.demo.controDeErrores.error;

public abstract class ApiSubError {
}
